refact: refactor NotificationServiceTest